# python-pipeline

./: .gitignore  Makefile  pyproject.toml  spec.md
docs/: claim-check.md
infrastructure/environments/dev/: main.tf
infrastructure/modules/sagemaker_skill/: main.tf  variables.tf
infrastructure/modules/sns_sqs_lambda/: main.tf  outputs.tf  variables.tf
libraries/infer_core/: pyproject.toml
libraries/infer_core/src/infer_core/: __init__.py  models.py
scripts/: sagemaker_client_async.py
services/data_processor/: pyproject.toml  requirements.txt
services/data_processor/src/: handler.py
services/metadata_fetcher/: README.md  pyproject.toml  requirements.txt
services/metadata_fetcher/src/: handler.py
